Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -91,14 +91,14 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Hola mundo!')"
+        "print('Escuela de datos de Alura')"
       ],
       "metadata": {
         "id": "0qZX8_ZQBYyk",
+        "outputId": "ed3fd78f-a834-4818-d804-a73ab606a9a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "03e29321-52ab-470c-967f-05a75e9ab0dd"
+        }
       },
       "execution_count": 1,
       "outputs": [
@@ -106,7 +106,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hola mundo!\n"
+            "Escuela de datos de Alura\n"
           ]
         }
       ]
@@ -114,48 +114,59 @@
     {
       "cell_type": "code",
       "source": [
-        "15"
+        "print('A')\n",
+        "print('D')\n",
+        "print('R')\n",
+        "print('I')\n",
+        "print('A')\n",
+        "print('N')\n",
+        "print('A')"
       ],
       "metadata": {
         "id": "GLMzF_AKBY7a",
+        "outputId": "cec91f66-ab14-4811-d294-e1af56f557a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2c822331-1a55-4f06-edd5-d01be102b08f"
+        }
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "15"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A\n",
+            "D\n",
+            "R\n",
+            "I\n",
+            "A\n",
+            "N\n",
+            "A\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print('Hola mi nombre es Adry tengo 26 y estoy estudiando phyton')"
+        "print(28, 'Octubre', 2025)\n",
+        "print('Año actual',2025)\n"
       ],
       "metadata": {
-        "id": "6WjFUIaBcZZv",
-        "outputId": "1f35d8c2-793c-46d0-fffa-d38d2ab6fd50",
+        "id": "V82j39v4vax3",
+        "outputId": "bde3e886-5158-4824-89dc-d91f20c48704",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hola mi nombre es Adry tengo 26 y estoy estudiando phyton\n"
+            "28 Octubre 2025\n",
+            "Año actual 2025\n"
           ]
         }
       ]
